<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">


    <!-- 1 - Sinais Vitais do Paciente  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_span="2"
            android:text="@string/app_name1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:layout_span="2"
            app:srcCompat="@drawable/hospital1" />
    </TableRow>

    <!-- 1 - PRESSÃO ARTERIAL -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pressao_arterial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/pressao_arterial" />

        <TextView
            android:id="@+id/edt_pressao_arterial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    <!-- 1 - Batimentos Cardíacos -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/batimentos_cardiacos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/batimentos_cardiacos" />

        <TextView
            android:id="@+id/edt_batimentos_cardiacos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <!-- 2 - Temperatura Do Corpo-->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/temperatura_do_corpo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/temperatura_do_corpo" />

        <TextView
            android:id="@+id/edt_temperatura_do_corpo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <!-- 1 - Nome Do Paciente -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nome_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/nome_paciente" />

        <TextView
            android:id="@+id/nome_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <!-- 1 - Número Do Leito -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/numero_do_leito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/numero_do_leito" />

        <TextView
            android:id="@+id/edt_numero_do_leito1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <!-- 1 - Botão Voltar -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/botao_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginLeft="100dp"
            android:layout_span="2"
            android:text="@string/botao_voltar"
            tools:background="#ff0004" />
    </TableRow>


</TableLayout>